<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">应用中心</string>
    <string name="text">大众点评</string>
    <string name="fraction">10分</string>
    <string name="rise">上升最快</string>
    <string name="game">游戏</string>
    <string name="app">应用</string>
    <string name="titlename">应用中心</string>
    <string name="free">免费</string> 
    <string name="limit">限次使用</string> 
    <string name="buy">需要购买</string> 
    <string name="down">下载数：</string>
    <string name="size">大小：</string>
    <string name="version">版本：</string>
    <string name="author">作者：</string>
    <string name="date">日期：</string>
    <string name="commen">人打分：</string>
    <string name="cancle">取消</string>
    <string name="tag">联网中......</string>
    <string name="search">搜索</string>
    <string name="app_versionname">应用中心</string>
    <string name="installed_list">安装列表</string>
    <string name="downloading_list">下载列表</string>
    <string name="start_text">正在加载中•••</string>
    <string name="search_hot">热门搜索</string>
     <string name="ticker_text">更新</string>
     
      <string name="h1">分类</string>
        <string name="h2">专题</string>
         <string name="h3">排行</string>
          <string name="h4">管理</string>
           <string name="h5">装机必备</string>
     
       <string name="f1">系统工具</string>
       <string name="f2">网络社交</string>
       <string name="f3">新闻办公</string>
       <string name="f4">娱乐视频</string>
       <string name="f5">开心游戏</string>
       <string name="f6">生活阅读</string>
       <string name="f7">实用工具</string>
       <string name="f8">旅游天气</string>
       
       <string name="percent">0%</string>
      
         <string name="apprank">应用排行</string>
          <string name="gamerank">游戏排行</string>
       
           <string name="recommend">推荐</string>
              
            <string name="wait">等待</string>
           
              <string name="download">下载</string>
                 <string name="boot">启动</string>
          <string name="update">更新</string>
                <string name="pause">暂停</string>
                
             <string name="install">安装</string>
              <string name="uninstall">卸载</string>
              
               <string name="inputkey">请输入关键字</string>
               
                <string name="update_title">应用更新</string>
                <string name="update_notify">有应用可更新请点击查看</string>
     
</resources>