<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/mbg" >

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/rl"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header" >

        <TableLayout
            android:id="@+id/lcontainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp" >

            <TableRow
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/f1"
                    style="@style/fenleitext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/f1"
                     android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                    android:onClick="onClickBar"
                    android:textSize="@dimen/font_size"
                    android:text="@string/f1" />

                <Button
                    android:id="@+id/f2"
                    style="@style/fenleitext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                       android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                    android:background="@drawable/f2"
                    android:onClick="onClickBar"
                    android:textSize="@dimen/font_size"
                    android:text="@string/f2" />
            </TableRow>

            <TableRow
                android:id="@+id/l1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/f3"
                    style="@style/fenleitext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                       android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                     android:textSize="@dimen/font_size"
                    android:background="@drawable/f3"
                    android:onClick="onClickBar"
                    android:text="@string/f3" />

                <Button
                    android:id="@+id/f4"
                    style="@style/fenleitext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/f4"
                    android:onClick="onClickBar"
                     android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                     android:textSize="@dimen/font_size"
                    android:text="@string/f4" />
            </TableRow>

            <TableRow
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/f5"
                    style="@style/fenleitext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/f5"
                    android:onClick="onClickBar"
                     android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                     android:textSize="@dimen/font_size"
                    android:text="@string/f5" />

                <Button
                    android:id="@+id/f6"
                    style="@style/fenleitext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/f6"
                    android:onClick="onClickBar"
                      android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                     android:textSize="@dimen/font_size"
                    android:text="@string/f6" />
            </TableRow>

            <TableRow
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/f7"
                    style="@style/fenleitext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/f7"
                    android:onClick="onClickBar"
                     android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                     android:textSize="@dimen/font_size"
                    android:text="@string/f7" />

                <Button
                    android:id="@+id/f8"
                    style="@style/fenleitext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                     android:gravity="center|bottom"
                    android:paddingBottom="@dimen/padding_buttom"
                     android:textSize="@dimen/font_size"
                    android:background="@drawable/f8"
                    android:onClick="onClickBar"
                    android:text="@string/f8" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>