<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/listselector" >

    <ImageView
        android:id="@+id/iv_notify"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:src="@drawable/default_icon" />

    <TextView
        android:id="@+id/tv_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/iv_notify"
        android:ellipsize="end"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/pb_notify"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="80dp"
        android:layout_toRightOf="@id/iv_notify"
        android:background="@drawable/probg"
        android:progressDrawable="@drawable/progress_hor" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp" >

        <ImageView
            android:id="@+id/iv_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/down" />

        <TextView
            android:id="@+id/tv_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_bt"
            android:layout_centerHorizontal="true"
            android:text="@string/download"
            android:textColor="#a6a6a6"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/notity_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/rl1"
        android:text="@string/percent"
        android:textColor="@android:color/background_dark"
        android:textSize="11sp" />

</RelativeLayout>